[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Map1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Materials/BunkerWall.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Bunker/TurnArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Bunker/Bunker.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Bunker/Troop.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Bunker/AutoTurnArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/BurnedGround_S.jpg" type="Texture" id=7]
[ext_resource path="res://Assets/BurnedGround_N.jpg" type="Texture" id=8]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.333333, 0.333333, 0.333333, 1 )
albedo_texture = ExtResource( 7 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 8 )

[sub_resource type="CapsuleMesh" id=6]
radius = 0.5
mid_height = 0.75

[sub_resource type="CylinderShape" id=7]
radius = 0.75

[node name="Bunker" type="Spatial"]
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Walls" type="Spatial" parent="."]

[node name="CSGBox" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, -14 )
height = 6.0
depth = 28.0
material = ExtResource( 2 )

[node name="CSGBox46" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -47, 3, -5 )
height = 6.0
depth = 30.0
material = ExtResource( 2 )

[node name="CSGBox7" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 41, 3, 15 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox31" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 3, -24 )
height = 6.0
depth = 4.0
material = ExtResource( 2 )

[node name="CSGBox35" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 3, -24 )
height = 6.0
depth = 4.0
material = ExtResource( 2 )

[node name="CSGBox36" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 3, -24 )
height = 6.0
depth = 4.0
material = ExtResource( 2 )

[node name="CSGBox44" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 3, -23 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox42" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29, 3, -29 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox11" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 41, 3, 25 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox14" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 3, 32 )
height = 6.0
depth = 4.0
material = ExtResource( 2 )

[node name="CSGBox13" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 3, 23 )
height = 6.0
depth = 14.0
material = ExtResource( 2 )

[node name="CSGBox22" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 3, 17 )
height = 6.0
depth = 24.0
material = ExtResource( 2 )

[node name="CSGBox26" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 3, 20.5 )
height = 6.0
depth = 21.0
material = ExtResource( 2 )

[node name="CSGBox27" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, 26 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox28" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, 10 )
height = 6.0
depth = 10.0
material = ExtResource( 2 )

[node name="CSGBox47" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29, 3, -11 )
height = 6.0
depth = 18.0
material = ExtResource( 2 )

[node name="CSGBox74" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 3, -9 )
height = 6.0
depth = 14.0
material = ExtResource( 2 )

[node name="CSGBox75" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42, 3, -8 )
height = 6.0
depth = 16.0
material = ExtResource( 2 )

[node name="CSGBox50" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 3, 16 )
height = 6.0
depth = 22.0
material = ExtResource( 2 )

[node name="CSGBox38" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 3, -39 )
height = 6.0
depth = 22.0
material = ExtResource( 2 )

[node name="CSGBox40" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, -41 )
height = 6.0
depth = 18.0
material = ExtResource( 2 )

[node name="CSGBox19" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 3, 41 )
height = 6.0
depth = 14.0
material = ExtResource( 2 )

[node name="CSGBox57" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 3, 33 )
height = 6.0
depth = 4.0
material = ExtResource( 2 )

[node name="CSGBox58" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 3, 39 )
height = 6.0
depth = 10.0
material = ExtResource( 2 )

[node name="CSGBox20" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, 41 )
height = 6.0
depth = 14.0
material = ExtResource( 2 )

[node name="CSGBox53" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 3, 44 )
height = 6.0
depth = 8.0
material = ExtResource( 2 )

[node name="CSGBox52" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -41, 3, 33 )
height = 6.0
depth = 18.0
material = ExtResource( 2 )

[node name="CSGBox66" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36, 3, 32 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox67" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36, 3, 16 )
height = 6.0
depth = 12.0
material = ExtResource( 2 )

[node name="CSGBox55" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 3, 26 )
height = 6.0
depth = 18.0
material = ExtResource( 2 )

[node name="CSGBox65" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 3, 9.5 )
height = 6.0
depth = 9.0
material = ExtResource( 2 )

[node name="CSGBox73" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 3, 7.5 )
height = 6.0
depth = 9.0
material = ExtResource( 2 )

[node name="CSGBox16" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 3, 42 )
height = 6.0
depth = 12.0
material = ExtResource( 2 )

[node name="CSGBox25" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 3, 38 )
height = 6.0
depth = 20.0
material = ExtResource( 2 )

[node name="CSGBox3" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 3, -4 )
height = 6.0
depth = 32.0
material = ExtResource( 2 )

[node name="CSGBox5" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 3, -2 )
height = 6.0
depth = 40.0
material = ExtResource( 2 )

[node name="CSGBox9" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 3, 36 )
height = 6.0
depth = 28.0
material = ExtResource( 2 )

[node name="CSGBox2" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 11, 3, -21 )
height = 6.0
depth = 26.0
material = ExtResource( 2 )

[node name="CSGBox29" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -17, 3, -21 )
height = 6.0
depth = 26.0
material = ExtResource( 2 )

[node name="CSGBox30" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -14, 3, -27 )
height = 6.0
depth = 20.0
material = ExtResource( 2 )

[node name="CSGBox45" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -42, 3, -21 )
height = 6.0
depth = 12.0
material = ExtResource( 2 )

[node name="CSGBox41" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -17, 3, -33 )
height = 6.0
depth = 26.0
material = ExtResource( 2 )

[node name="CSGBox18" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -15, 3, 49 )
height = 6.0
depth = 14.0
material = ExtResource( 2 )

[node name="CSGBox17" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10, 3, 49 )
height = 6.0
depth = 28.0
material = ExtResource( 2 )

[node name="CSGBox4" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 36, 3, 4 )
height = 6.0
depth = 24.0
material = ExtResource( 2 )

[node name="CSGBox21" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7, 3, 4 )
height = 6.0
depth = 22.0
material = ExtResource( 2 )

[node name="CSGBox76" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -23, 3, -9 )
height = 6.0
depth = 10.0
material = ExtResource( 2 )

[node name="CSGBox79" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9, 3, -9 )
height = 6.0
depth = 10.0
material = ExtResource( 2 )

[node name="CSGBox80" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3, 3, -36 )
height = 6.0
depth = 10.0
material = ExtResource( 2 )

[node name="CSGBox81" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 17, 3, -36 )
height = 6.0
depth = 10.0
material = ExtResource( 2 )

[node name="CSGBox6" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 33, 3, 11 )
height = 6.0
depth = 18.0
material = ExtResource( 2 )

[node name="CSGBox12" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 35, 3, 29 )
height = 6.0
depth = 14.0
material = ExtResource( 2 )

[node name="CSGBox8" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 45, 3, 17 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox10" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 45, 3, 23 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox15" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 26, 3, 35 )
height = 6.0
depth = 8.0
material = ExtResource( 2 )

[node name="CSGBox23" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4, 3, 30 )
height = 6.0
depth = 16.0
material = ExtResource( 2 )

[node name="CSGBox59" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -13, 3, 35 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox61" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -26, 3, 32 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox62" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -26, 3, 26 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox63" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -26, 3, 18 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox69" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 3, 22 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox70" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 3, 16 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox71" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -13, 3, 11 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox72" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12, 3, 4 )
height = 6.0
depth = 8.0
material = ExtResource( 2 )

[node name="CSGBox64" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -26, 3, 13 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox77" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -38.5, 3, -7 )
height = 6.0
depth = 5.0
material = ExtResource( 2 )

[node name="CSGBox78" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -38.5, 3, -15 )
height = 6.0
depth = 5.0
material = ExtResource( 2 )

[node name="CSGBox60" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -13, 3, 43 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox32" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 44, 3, -21 )
height = 6.0
depth = 8.0
material = ExtResource( 2 )

[node name="CSGBox37" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 26, 3, -27 )
height = 6.0
depth = 8.0
material = ExtResource( 2 )

[node name="CSGBox48" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -32, 3, -1 )
height = 6.0
depth = 8.0
material = ExtResource( 2 )

[node name="CSGBox49" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -32, 3, 4 )
height = 6.0
depth = 22.0
material = ExtResource( 2 )

[node name="CSGBox68" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -42, 3, 11 )
height = 6.0
depth = 10.0
material = ExtResource( 2 )

[node name="CSGBox56" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -29, 3, 36 )
height = 6.0
depth = 16.0
material = ExtResource( 2 )

[node name="CSGBox33" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 32, 3, -21 )
height = 6.0
depth = 8.0
material = ExtResource( 2 )

[node name="CSGBox43" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -33, 3, -27 )
height = 6.0
depth = 6.0
material = ExtResource( 2 )

[node name="CSGBox34" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 42, 3, -27 )
height = 6.0
depth = 16.0
material = ExtResource( 2 )

[node name="CSGBox39" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10, 3, -49 )
height = 6.0
depth = 24.0
material = ExtResource( 2 )

[node name="CSGBox24" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 5, 3, 35 )
height = 6.0
depth = 14.0
material = ExtResource( 2 )

[node name="CSGBox51" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -32, 3, 41 )
height = 6.0
depth = 18.0
material = ExtResource( 2 )

[node name="CSGBox54" type="CSGBox" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -39, 3, 23 )
height = 6.0
depth = 8.0
material = ExtResource( 2 )

[node name="Floor" type="MeshInstance" parent="."]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.965926, 0.183013, 0.183013, -0.258819, 0.683013, 0.683013, 0, -0.707107, 0.707107, 0, 18, 0 )

[node name="TurnPoints" type="Spatial" parent="."]

[node name="TurnArea" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1, 32.5 )
south = true
north = true
east = true
west = true

[node name="TurnArea8" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.5, 1, 32.5 )
south = true
north = true
west = true

[node name="TurnArea11" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.5, 1, 14 )
south = true
north = true
east = true
west = true

[node name="TurnArea12" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.5, 1, 1.5 )
south = true
west = true

[node name="TurnArea13" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1, 1.5 )
south = true
north = true
east = true
west = true

[node name="TurnArea15" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.5, 1, 1.5 )
south = true
north = true
east = true
west = true

[node name="TurnArea14" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 1, -6 )
south = true
north = true
east = true
west = true

[node name="TurnArea9" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.5, 1, 32 )
south = true
north = true
east = true

[node name="TurnArea10" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 1, 20 )
south = true
north = true
east = true

[node name="TurnArea2" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.5, 1, 32.5 )
south = true
north = true
east = true

[node name="TurnArea3" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.5, 1, 38.5 )
south = true
north = true
west = true

[node name="TurnArea4" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -33, 1, 26.5 )
south = true
north = true
west = true

[node name="TurnArea5" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -44.5, 1, 1.5 )
south = true
north = true
east = true

[node name="TurnArea6" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 1, -18 )
south = true
north = true
west = true

[node name="TurnArea7" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 1, -24 )
north = true
east = true
west = true

[node name="TurnArea16" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, -30 )
north = true
east = true
west = true

[node name="TurnArea17" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 1, -14 )
south = true
north = true
east = true

[node name="TurnArea18" parent="TurnPoints" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 1, -10 )
south = true
north = true
west = true

[node name="AutoTurnArea" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -38.5, 0, 38.5 )
from_east_dir = -1
from_north_dir = 1

[node name="AutoTurnArea24" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.5, 0, 46 )
from_north_dir = 1

[node name="AutoTurnArea2" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -38.5, 0, 26.5 )
from_east_dir = 1
from_south_dir = -1

[node name="AutoTurnArea8" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, 32 )
from_west_dir = 1
from_north_dir = -1

[node name="AutoTurnArea10" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.5, 0, 14 )
from_east_dir = 1
from_south_dir = -1

[node name="AutoTurnArea9" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, 14 )
from_west_dir = -1
from_south_dir = 1

[node name="AutoTurnArea3" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -33, 0, 7.5 )
from_west_dir = -1
from_south_dir = 1

[node name="AutoTurnArea11" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -6 )
from_west_dir = -1
from_south_dir = 1

[node name="AutoTurnArea13" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.5, 0, -6 )
from_south_dir = -1

[node name="AutoTurnArea14" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.5, 0, -6 )
from_east_dir = 1

[node name="AutoTurnArea15" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.5, 0, 1.5 )
from_north_dir = -1

[node name="AutoTurnArea12" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 1.5 )
from_north_dir = -1

[node name="AutoTurnArea4" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -44.5, 0, 7.5 )
from_east_dir = -1
from_north_dir = 1

[node name="AutoTurnArea5" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -44.5, 0, -18 )
from_east_dir = 1
from_south_dir = -1

[node name="AutoTurnArea6" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 0, -24 )
from_east_dir = 1
from_south_dir = -1

[node name="AutoTurnArea7" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 0, -30 )
from_east_dir = 1
from_south_dir = -1

[node name="AutoTurnArea16" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -30 )
from_west_dir = -1
from_south_dir = 1

[node name="AutoTurnArea17" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -24 )
from_east_dir = -1
from_north_dir = 1

[node name="AutoTurnArea18" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -24 )
from_west_dir = -1
from_south_dir = 1

[node name="AutoTurnArea19" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, -10 )
from_east_dir = -1

[node name="AutoTurnArea20" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, -18 )
from_south_dir = 1

[node name="AutoTurnArea22" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 0, -14 )
from_west_dir = 1

[node name="AutoTurnArea23" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 0, -24 )
from_east_dir = 1
from_south_dir = -1

[node name="AutoTurnArea21" parent="TurnPoints" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -18 )
from_east_dir = -1

[node name="Troop" type="Spatial" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.75, 45 )
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Troop"]

[node name="Body" type="MeshInstance" parent="Troop"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 6 )
skeleton = NodePath("../..")

[node name="TroopCollider" type="Area" parent="Troop/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Troop/Body/TroopCollider"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 7 )

[node name="Camera" type="Camera" parent="Troop"]
transform = Transform( 1, 0, 0, 0, 0.878409, 0.47791, 0, -0.47791, 0.878409, 0, 2, 2 )

[connection signal="area_entered" from="Troop/Body/TroopCollider" to="Troop" method="_on_collider_entered"]
